[package]
name = "utapi-rs"
version = "0.1.0"
authors = ["Ivan Leon <ivan@dino.dev>"]
description = "A Rust wrapper around the UploadThing API."
license = "MIT"
edition = "2021"
homepage = "https://github.com/ielm/utapi-rs"
repository = "https://github.com/ielm/utapi-rs"


[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^3.6"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "^0.11", features = ["json", "multipart"] }
