[package]
name = "utapi-rs"
version = "0.1.1"
authors = ["Ivan Leon <ivan@dino.dev>", "@malaow3"]
description = "A Rust wrapper around the UploadThing API."
license = "MIT"
edition = "2021"
homepage = "https://docs.rs/utapi-rs/latest/utapi_rs/"
repository = "https://github.com/ielm/utapi-rs"


[dependencies]
serde = {version = "^1.0", features = ["derive"]}
serde_with = "^3.6"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "^0.11", features = ["json", "multipart"] }
